showing available user rating or avg rating

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/rating.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/rating.html
@@ -42,8 +42,7 @@
 
 
 <script type="text/javascript">
- //    
- setStars("{% firstof ratings.user_rating   %}","{{node.pk}}")
+ setStars("{% firstof ratings.user_rating  ratings.avg %}","{{node.pk}}")
 </script>
 {% endblock %}
 
