Misc Css changes

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -3850,7 +3850,8 @@ ul.nav_menu_1 {
 
 .activity_page_rendered{
     //margin-top:10px;
-    margin-left:10px;
+    margin-left:20px;
+    max-width: 900px;
    // width:145%;
 }
 /* Rating css */
