--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/rating.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/rating.html
@@ -15,6 +15,8 @@
 
     <form style="display: inline-block" id="form-for-{{node.pk}}">
     <!-- Sets the rating values as data attributes -->
+        <input type="hidden" name="is_contributor" class="is_contributor" "{% if request.user.id in node.contributors %}" value= "True" "{% endif %}">
+        <input type="hidden" name="user_access_priv" class="user_access_priv"  value= "{{user_access_priv}}">
         <span datat-tooltip title="Your rating" class="lbl_tag" style="display: inline-block">
             <div id="rating-area-{{node.pk}}" {% if user_access_priv == "allow" %}  data-node="{{node}}" data-avg-rating="{{ratings.avg}}" data-votes="{{ratings.tot}}" class="rating-bar rating-bar-{{node.pk}}" data-user-rating="{{ratings.user_rating}}" {% else %} class=" rating-bar rating-bar-{{node.pk}}show user_not_enrolled" {% endif %}>
                 <span id="rating-span-{{node.pk}}" >
