--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/test_template.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/test_template.html
@@ -2,6 +2,51 @@
 {% load i18n %}
 {% load ndf_tags %}
 {% block body_content %}
+
 {% get_node_hierarchy node as node_hierarchy %}
-{% include "ndf/section_subsection.html" with unit_structure=node_hierarchy unit_obj=node group_id=node.pk section_name="Topic" sub_section_name="Activity"  %}
+
+<div class="row listing-row"> 
+      <div class="small-12 medium-6 large-3 columns ">
+        <div class="asset_tile">
+            <div class="asset_preview">
+            	<section id="photos">
+                 
+				</section>
+            </div>
+            <div class="asset_text">
+                <div class="asset_title" title="">Title</div>
+                <div class="asset_desc">Desc</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+	
+
+
+<script type="text/javascript">
+	function getRandomSize(min, max) {
+  return Math.round(Math.random() * (max - min) + min);
+}
+
+var allImages = "";
+
+for (var i = 0; i < 4; i++) {
+  var width = getRandomSize(208, 218);
+  var height =  getRandomSize(208, 218);
+  allImages += '<img src="https://placekitten.com/'+width+'/'+height+'" alt="pretty kitty">';
+}
+
+$('#photos').append(allImages);
+</script>
+
+
+
+
+
+
+
+
+
 {% endblock body_content %}
