responsiv footer wip

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer_clix.html
@@ -2,9 +2,9 @@
 {% load get_latest_git_hash from simple_filters %}
 {% load ndf_tags %}
 
-
-<div class="wrapper-footer">
-      <footer id="footer-clix" class="grid-container">
+<footer>
+  <div class="wrapper-footer">
+      <div id="footer-clix" class="grid-container">
         <div class="links-logos">
           <nav class="nav-links-logos" aria-label="About">
             <ol>
@@ -66,5 +66,6 @@
             </div>
           </nav>
         </div>
-      </footer>
+      </div>
     </div>
+</footer>
