--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4881,152 +4881,94 @@ ul.nav_menu_1 {
     width:1351px;
 }
 
-.footer_clix{
-    clear: both;
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    //padding: 1rem;
-    z-index: 10;
-    //background-color: rgba(255, 255, 255, 0.7);
-    background-color: #164a7b;
-    color: #fff;
-        a{
-            color: #fff;
-            //letter-spacing:0.5rem;
-    }
 
-    .footer-top{
-        margin-bottom:-16px;
-        .footer-heading-left{
-                font-size: 17px;
-                padding-top: 7px;
-                color: rgba(22, 74, 123, 0.63);
-                font-family: 'OpenSans-Semibold';
-                margin-left: 45px;
-                letter-spacing: 3.5px;
-        }
-        .footer-heading-right{
-                font-size: 19px;
-                padding-top: 5px;
-                color: rgba(107, 0, 83, 0.66);
-                font-family: 'OpenSans-Semibold';
-                margin-right: 271px;
-                padding-bottom: 5px;
-                letter-spacing: 0.5px;
-        }
-        
-    }
-
-    .footer-small-text{
-                margin-left: 16px;
-                margin-top: -17px;
-                margin-bottom:2px;
-                >a{
-                    color:gray;
-                }
-        }
-        
-
-    .footer-logo{
-                height: 65px;
-                width: 76px;
-        }
-
-    .image-left-section{
-        padding: 1rem;
-        width:55rem;
-        max-width:55rem;
-        margin: 0 auto;
-    }
-
-    .footer_link_cont {
-        display: inline-block;
-        vertical-align: top;
-        margin: 20px;
-        text-align: left;
-        margin-top: -15px;
-        margin-left: 34px;
-
-      .links_collapse {
-      max-height: 78px;
-      overflow: hidden;
-      transition: all 0.5s ease-out;
-
-      ul {
-        display: inline;
-        padding: 0;
-        margin: 0px !important;
-
-        >li,a{
-            color:$primary-orange;
-            font-family: OpenSans-Regular;
-            font-size:14px;
-        }
-      }
-    }
-
-      .links_show {
-        //change as per requirement on addition on more links in future
-        max-height: 600px;
-      }
-      
-      .show_foot_links {
-        color: #777777;
-        cursor: pointer;
-
-        &:hover {
-          text-decoration: underline;
-        }
-      }
-    }
-
-
-    .footer-bottom{
-        text-align:center;
-        margin-top:-15px;
-
-       >h6{ 
-            color:$secondry-blue !important;
-            font-weight: 500;
-
-        >a{
-            color: $primary-blue;
-            font-family: OpenSans-Semibold;
-            font-size: 14px;
-        }
-    }
-        >h7{
-            color:$secondry-blue;
-        }
-
-        .footer-tiny{
-            color:#aaa;
-            margin-top:-33px;
-            font-size:10px;
-        }
-
-    }  
-      
-      
- 
-
-}
-
-.wrapper-footer{
-    box-shadow: 0 -1px 5px 0 rgba(0,0,0,0.1);
+footer {
+  background:rgba(221, 221, 221, 0.18);
+  color:#fff;
+  margin:0;
+  font-family: 'Open Sans', sans-serif;
+  box-shadow: 0 -1px 5px 0 rgba(0,0,0,0.1);
     border-top: 1px solid #c5c6c7;
     padding: 0px 0px 0px 3px;
-    background: rgba(221, 221, 221, 0.18);
-    clear: both;
     //position: fixed;
     //margin-top: -100px;
     right: 0;
     bottom: 0;
     left: 0;
     z-index:10;
+    max-width:1200px;
+    display:flex;
+    background: rgba(221, 221, 221, 0.18);
+    clear: both;
+  
+  .centered {
+    max-width:1200px;
+    margin:0 auto;
+    display:flex;
+    justify-content:space-between;
+    
+    .footer-logo {
+      width:20%;
+      
+      img.logo {
+        padding:30px 20px 10px 20px;
+        max-width:100%;
+      }
+    }
+    
+    .footer-contact {
+      width:20%;
+    }
+    
+    .footer-navigation {
+      width:60%;
+      
+      .footer-links-holder {
+        width: 33.33333%;
+        position: relative;
+        float: left;
+        margin: 0;
+        
+        .footer-links {
+          margin:0;
+          padding:0;
+          list-style:none;
+          -webkit-transition: max-height .5s;
+          transition: max-height .5s;
+        }
+      }
+    }
+  }
+  .bottom-bar {
+    position:relative;
+    text-align:center;
+    font-size:.8em;
+    text-transform:uppercase;
+    background:#000;
+    padding:15px 0;
+  }
+}
+
+.wrapper-footer{
+    box-shadow: 0 -1px 5px 0 rgba(0,0,0,0.1);
+    border-top: 1px solid #c5c6c7;
+    padding: 0px 0px 0px 3px;
+    //position: fixed;
+    //margin-top: -100px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index:10;
+    max-width:1200px;
+    display:flex;
+    background: rgba(221, 221, 221, 0.18);
+    clear: both;
     //height:200px;
+    .centered {
+        max-width:1200px;
+        margin:0 auto;
+        display:flex;
+        justify-content:space-between;
 
     #footer-clix{
         box-sizing: border-box;
