--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -885,7 +885,7 @@ ul.horizontal_tabs_gstudio > li.sub_group_action:hover ul {
   height: 210px;
 }
 /* line 998, ../../../scss/_clix2017.scss */
-.asset_tile .asset_preview #photos {
+.asset_tile .asset_preview .photos {
   /* Prevent vertical gaps */
   line-height: 0;
   -webkit-column-count: 2;
@@ -896,14 +896,14 @@ ul.horizontal_tabs_gstudio > li.sub_group_action:hover ul {
   column-gap: 0px;
 }
 /* line 1009, ../../../scss/_clix2017.scss */
-.asset_tile .asset_preview #photos img {
+.asset_tile .asset_preview .photos img {
   /* Just in case there are inline attributes */
   width: 100% !important;
   height: auto !important;
 }
 @media (max-width: 1200px) {
   /* line 1015, ../../../scss/_clix2017.scss */
-  .asset_tile .asset_preview #photos {
+  .asset_tile .asset_preview .photos {
     -moz-column-count: 2;
     -webkit-column-count: 2;
     column-count: 2;
@@ -911,7 +911,7 @@ ul.horizontal_tabs_gstudio > li.sub_group_action:hover ul {
 }
 @media (max-width: 1000px) {
   /* line 1022, ../../../scss/_clix2017.scss */
-  .asset_tile .asset_preview #photos {
+  .asset_tile .asset_preview .photos {
     -moz-column-count: 2;
     -webkit-column-count: 2;
     column-count: 2;
@@ -919,7 +919,7 @@ ul.horizontal_tabs_gstudio > li.sub_group_action:hover ul {
 }
 @media (max-width: 800px) {
   /* line 1029, ../../../scss/_clix2017.scss */
-  .asset_tile .asset_preview #photos {
+  .asset_tile .asset_preview .photos {
     -moz-column-count: 2;
     -webkit-column-count: 2;
     column-count: 2;
@@ -927,7 +927,7 @@ ul.horizontal_tabs_gstudio > li.sub_group_action:hover ul {
 }
 @media (max-width: 400px) {
   /* line 1036, ../../../scss/_clix2017.scss */
-  .asset_tile .asset_preview #photos {
+  .asset_tile .asset_preview .photos {
     -moz-column-count: 1;
     -webkit-column-count: 1;
     column-count: 1;
