--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -995,7 +995,7 @@ ul.horizontal_tabs_gstudio {
             width:100%;
             height:210px;
         }
-            #photos {
+            .photos {
                /* Prevent vertical gaps */
                line-height: 0;
                
@@ -1006,34 +1006,34 @@ ul.horizontal_tabs_gstudio {
                column-count:         2;
                column-gap:           0px;
             }
-        #photos img {
+        .photos img {
           /* Just in case there are inline attributes */
           width: 100% !important;
           height: auto !important;
         }
         @media (max-width: 1200px) {
-              #photos {
+              .photos {
               -moz-column-count:    2;
               -webkit-column-count: 2;
               column-count:         2;
               }
             }
             @media (max-width: 1000px) {
-              #photos {
+              .photos {
               -moz-column-count:    2;
               -webkit-column-count: 2;
               column-count:         2;
               }
             }
             @media (max-width: 800px) {
-              #photos {
+              .photos {
               -moz-column-count:    2;
               -webkit-column-count: 2;
               column-count:         2;
               }
             }
             @media (max-width: 400px) {
-              #photos {
+              .photos {
               -moz-column-count:    1;
               -webkit-column-count: 1;
               column-count:         1;
