--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -991,6 +991,11 @@ ul.horizontal_tabs_gstudio {
         //background-color: #eee;
         //background: url(/static/ndf/images/asset_thumbnail.png)no-repeat;
         border-width: 5px;
+        .photos-1 img {
+          /* Just in case there are inline attributes */
+          width: 100% !important;
+          height: 210px !important;
+        }
         img{
             width:100%;
             height:210px;
