--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -163,6 +163,8 @@
                 {% endif %}
                 <li><a href="{% url explore_url %}" {% if title == 'base courses' or title == "courses" or title == "drafts" %} class="active" {% endif %} > Explore</a>
                 </li>
+                    
+                {% if site.ELASTIC_SEARCH %}
                 <li class="has-form">
                     <form action="{% url 'get_search' %}"
                       name="search_form" method="GET" >
@@ -182,6 +184,7 @@
 
                     </form>
                   </li>
+                {% endif %}
             </ul>
           </section>
     </nav>
