--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -1039,6 +1039,73 @@ ul.horizontal_tabs_gstudio {
               column-count:         1;
               }
             }
+
+
+              .photos-03{
+    /* no vertical space*/
+    line-height: 0;
+    -webkit-column-count: 1;
+    -moz-column-count:    1;
+    -webkit-column-gap:   0px;
+    -moz-column-gap:      0px;
+    column-count:         1;
+    column-gap:           1px;
+    -moz-row-count: 3;
+    row-count: 3;
+    -webkit-row-gap:   0px;
+    -moz-row-gap:      0px;
+
+  }
+
+  .photos-03 img {
+  /* Just in case there are inline attributes */
+      width: 100% !important; 
+      height: auto !important;
+  }
+
+  @media (max-width: 1200px) {
+      .photos-03 {
+      -moz-row-count:    3;
+      -webkit-column-count: 1;
+      column-count:         1;
+      row-count: 3;
+      -webkit-row-gap:   0px;
+      -moz-row-gap:      0px;
+      }
+  }
+
+  @media (max-width: 1000px) {
+      .photos-03 {
+      -moz-row-count:    3;
+      -webkit-column-count: 1;
+      column-count:         1;
+      row-count: 3;
+      -webkit-row-gap:   0px;
+      -moz-row-gap:      0px;
+      }
+  }
+
+  @media (max-width: 800px) {
+    .photos-03 {
+      -moz-row-count:    3;
+      -webkit-column-count: 0;
+      column-count:         1;
+      row-count: 3;
+      -webkit-row-gap:   0px;
+      -moz-row-gap:      0px;
+    }
+  }
+
+  @media (max-width: 400px) {
+    .photos-03 {
+      -moz-row-count:    3;
+      -webkit-column-count: 1;
+      column-count:         1;
+      row-count: 3;
+      -webkit-row-gap:   0px;
+      -moz-row-gap:      0px;
+    }
+  }
         }
 
     .asset_text {
@@ -5280,3 +5347,4 @@ a.img{
 @media screen and (max-width: 480px) {
   
 }
+
