Resolve toggling issue on click of lesson name in course player tree

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_content.html
@@ -69,8 +69,8 @@
                                 if (child_key === 'id'){
                                     activity_ids.push(child_val)
                                 }
+                                $li.children('div').addClass('jqtree-toggler')
                             })
-                            $('div').addClass('jqtree-toggler')
                         }
                         isLessonComplete = activity_ids.every(function(val) {
                             return visited_nodes_ids.indexOf(val) >= 0;
