extra css removed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -957,7 +957,7 @@ ul.horizontal_tabs_gstudio > li.sub_group_action:hover ul {
 /* line 1064, ../../../scss/_clix2017.scss */
 .asset_tile .asset_preview .photos-03 img {
   /* Just in case there are inline attributes */
-  width: 35px !important;
+  width: 100% !important;
   height: 70px !important;
 }
 @media (max-width: 1200px) {
