--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -1063,7 +1063,7 @@ ul.horizontal_tabs_gstudio {
 
                   .photos-03 img {
                   /* Just in case there are inline attributes */
-                      width: 35px !important; 
+                      width: 100% !important; 
                       height: 70px !important;
                   }
 
