Post (Reply) button css modified

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -3110,12 +3110,12 @@ ul.jqtree-tree .jqtree-toggler {
             vertical-align: top;
         }
         .post-btn{
-            background-color: white;
+            background-color: #720f5e;
             width: 77px;
             margin-left: 17px;
             &:hover{
-                color: #FFC151;
-                background-color: rgba(206, 120, 105, 0.25);
+                color: #720f5e;
+                background-color: #ffffff;
             }
 
 
