rating css issue in activity player fixed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4763,7 +4763,7 @@ ul.nav_menu_1 {
 
 
 .input_links{
-    margin-right: 50px;
+    margin-left: 10px;
     a{
         margin-right: 35px;
         margin-top: 5px;
