--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -4535,7 +4535,7 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
 
 /* line 4765, ../../../scss/_clix2017.scss */
 .input_links {
-  margin-right: 50px;
+  margin-left: 10px;
 }
 /* line 4767, ../../../scss/_clix2017.scss */
 .input_links a {
