--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -84,10 +84,8 @@
           <div class="small-8 columns">
 
             <div class="course_editor_section">
-             <div class="small-4 columns left">
+              <div class="input_links row" style="margin-left:10px;">
               {% include 'ndf/rating.html'%}
-            </div>
-              <div class="input_links row">
               {% get_relation_value node.pk 'has_help' as grel_help %}
               {% get_relation_value node.pk 'has_admin_page' as grel_admin_page %}
                 {% if grel_help.grel_id  %}
