--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -74,14 +74,14 @@
           {% for each in other_translations %}
             <a href="{% url 'view_course_page' group_id each.pk %}"  title="{{each.name}}">
               <div class="small-12 medium-6 large-3 columns ">
-                <div class="asset_tile">
-                  <div class="asset_preview">
+                <div class="activity_tile">
+                  <div class="activity_preview">
                     <div class="raw_material_asset">{{each.language.1}}</div>                
                       <img src="/static/ndf/images/asset.png">
                   </div>
-                  <div class="asset_text">
-                      <div class="asset_title">{{each.name|truncatechars:25}}</div>
-                      <div class="asset_desc">{{each.content|striptags|truncatechars:25}}</div>
+                  <div class="activity_text">
+                      <div class="activity_title">{{each.name|truncatechars:25}}</div>
+                      <div class="activity_desc">{{each.content|striptags|truncatechars:25}}</div>
                   </div>
                 </div>
               </div>
@@ -118,8 +118,8 @@
             {% for each in all_pages %}
                 <a class="view-page" data-page-id="{{each.pk}}" data-del-activity-page-id="{{each.pk}}"  data-node-name="{{each.name}}" title="{{each.name}}" href="{% url 'view_course_page' group_id each.pk %}">
                     <div class="small-12 medium-6 large-3 columns">
-                        <div class="asset_tile">
-                            <div class="asset_preview">
+                        <div class="activity_tile">
+                            <div class="activity_preview">
                                 {% if each.if_file.mid.relurl and 'video' not in each.if_file.mime_type %}
                                 <img src="{{MEDIA_URL}}{{each.if_file.mid.relurl}}">
                                 {% elif 'video' not in each.if_file.mime_type and each.if_file.thumbnail.relurl %}
@@ -128,13 +128,13 @@
                                 <img src="/static/ndf/images/asset_thumbnail.png">
                                 {% endif %}
                             </div>
-                            <div class="asset_text">
+                            <div class="activity_text">
                                 <div class="asset_title" title="{{each.name}}">{% firstof each.altnames|truncatechars:25 each.name|truncatechars:25 %}</div>
                                     {% if user.is_authenticated  and not group_object.edit_policy == "NON_EDITABLE"  or gstaff_access %}
                                     </a>
                                     <input type="checkbox" class="activitynode" name="activitynode" value="{{each.pk}}" style="margin:0; float:right;" class="asset_content_checkbox">
                                     {% endif %}
-                                <div class="asset_desc">{{each.content|safe|striptags|truncatechars:25}}</div>
+                                <div class="activity_desc">{{each.content|safe|striptags|truncatechars:25}}</div>
                             </div>
                         </div>
                     </div>
